--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,7 +5,7 @@
       <% @cocktails.each do |cocktail| %>
         <%= link_to cocktail_path(cocktail) do %>
           <div class="card-trip">
-            <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+            <%= cl_image_tag cocktail.photo, height: 300, width: 400, crop: :fill %>
             <div class="card-trip-infos">
               <div>
                 <h2><%= cocktail.name %></h2>
