--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  width: 33%;
+  width: 240px;
   margin: 1em;
 }
 
