--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,19 +4,7 @@
     <div class="row">
       <% @cocktails.each do |cocktail| %>
         <%= link_to cocktail_path(cocktail) do %>
-          <div class="card-trip">
-            <%= cl_image_tag cocktail.photo, height: 300, width: 400, crop: :fill %>
-            <div class="card-trip-infos">
-              <div>
-                <h2><%= cocktail.name %></h2>
-                <ul>
-                  <% cocktail.doses.each do |dose| %>
-                  <li><%= dose.description %> of <%= dose.ingredient.name %></li>
-                  <% end %>
-                </ul>
-              </div>
-            </div>
-          </div>
+          <%= render partial: 'card-trip', locals: {cocktail: cocktail} %>
         <% end %>
       <% end %>
     </div>
