--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,6 @@
 @import "components/index";
 @import "pages/index";
 
-// body {
-//   background-color: #101014;
-// }
+body {
+  color: #F5F4F9;
+}
