--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Let's mix ourselves up a litlle su'n</h1>
+  <h1>Let's mix ourselves up a litlle somethin' somethin'</h1>
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
     <%= f.input :photo %>
