--- a/app/assets/stylesheets/components/_card-trip.scss
+++ b/app/assets/stylesheets/components/_card-trip.scss
@@ -1,9 +1,15 @@
 .card-trip {
   overflow: hidden;
-  background: white;
+  background: #F5F4F9;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   width: 240px;
   margin: 1em;
+  transition: transform .5s;
+  border-radius: 2px;
+}
+
+.card-trip:hover {
+  transform: scale(1.02);
 }
 
 .card-trip > img {
