--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Here the cocktail: <%= @cocktail.name %></h1>
+  <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
   <p>Ingredients:</p>
   <ul>
     <% @cocktail.doses.each do |dose| %>
