looks a bit less shit

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,8 +10,8 @@ $body-bg:                 $dark-blue;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
+$body-color: $light-gray;
+$primary:    $derple;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
