--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,6 +2,6 @@
   <div class="container">
     <h1>Midnight Emporium</h1>
     <p>For all your cocktail database needs</p>
-    <%= link_to "Make yo' self a drank", new_cocktail_path, style: "text-decoration: none;" %>
+    <%= link_to "Make yo' self a drank", new_cocktail_path, class: "btn btn-primary" %>
   </div>
 </div>
